--- a/train_model/credentials.yml
+++ b/train_model/credentials.yml
@@ -1,4 +1,6 @@
 slack:
   slack_token: "xoxb-449949744724-451493539782-uPGGdm5tiFb4p1hKhqmjlxej"
   slack_channel: "@general"
-  
+
+rest:
+  # no credentials needed
