Adding changes for getting release and build info for chatops

--- a/train_model/credentials.yml
+++ b/train_model/credentials.yml
@@ -1,6 +1,6 @@
 slack:
-  slack_token: "xoxb-449949744724-451493539782-uPGGdm5tiFb4p1hKhqmjlxej"
-  slack_channel: "@general"
-
+  slack_token: "xoxb-380592046658-462636231478-wPH87QKSx6uYu0u4F2LP6anq"
+  slack_channel: "@testing"
+  
 rasa_utils.bot_server_channel.BotServerInputChannel:
   # pass
