--- a/train_model/nlu_config.yml
+++ b/train_model/nlu_config.yml
@@ -1,2 +1,18 @@
 language: en
-pipeline: tensorflow_embedding
+pipeline:
+- name: "tokenizer_whitespace"
+- name: "intent_entity_featurizer_regex"
+- name: "ner_crf"
+  features: [
+              ["low", "title", "upper"],
+              ["bias", "low", "prefix5", "prefix2", "suffix5", "suffix3",
+               "suffix2", "upper", "digit", "pattern"],
+              ["low", "title", "upper"]
+            ]
+- name: "ner_synonyms"
+- name: "intent_featurizer_count_vectors"
+- name: "intent_classifier_tensorflow_embedding"
+  intent_tokenization_flag: true
+  intent_split_symbol: "+"
+
+
