Updating syntax for Maintainer

--- a/Dockerfile_chat
+++ b/Dockerfile_chat
@@ -1,6 +1,6 @@
 FROM ubuntu:16.04
 
-MAINTANER Deepak Naik "deenaik@gmail.com"
+MAINTAINER Deepak Naik "deenaik@gmail.com"
 
 RUN apt-get update -y && \
     apt-get install -y python-pip python-dev
