Reviewed changes made by Vikram

--- a/train_model/credentials.yml
+++ b/train_model/credentials.yml
@@ -1,6 +1,6 @@
 slack:
-  slack_token: "xoxb-380592046658-462636231478-wPH87QKSx6uYu0u4F2LP6anq"
-  slack_channel: "@testing"
+  slack_token: "xoxb-380592046658-492082673108-IvzWvAgOPFqaxoAHCUlwURdh"
+  slack_channel: "@general"
   
 rasa_utils.bot_server_channel.BotServerInputChannel:
   # pass
