added docker files for actions and rasa

--- a/train_model/credentials.yml
+++ b/train_model/credentials.yml
@@ -1,6 +1,4 @@
 slack:
-  slack_token: "xoxb-449949744724-451493539782-uPGGdm5tiFb4p1hKhqmjlxej"
-  slack_channel: "@general"
-
-rasa_utils.bot_server_channel.BotServerInputChannel:
-  # pass
+  slack_token: "xoxb-380592046658-488104220560-oEilha9CreidN5s2LMiHNeIQ"
+  slack_channel: "@testing"
+  
