--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 flask
 pymongo
-rasa_nlu[tensorflow]
-rasa_core
+rasa_nlu
 spacy
-sklearn_crfsuite
+rasa_core_sdk
+sklearn_crfsuite==0.3.6
+tensorflow==1.10.0
+rasa_core==0.11.12
 #python -m spacy download en
