--- a/train_model/domain.yml
+++ b/train_model/domain.yml
@@ -7,30 +7,45 @@ intents:
   - mood_deny
   - mood_great
   - mood_unhappy
-  - group-by-priority
-  - group-by-item-type
+  - release
+  - change
+  - files_modified
+  - jenkins jobs
+  - performance
+  - sahifailedsummary
+  - junitresult
+  - connectionleak
+  - sonar
+  - release_num
+
+entities:
+  - release_no
+  - build_no
+
+slots:
+  release_no:
+    type: text
 
 actions:
-  - utter_greet
+  - utter_hello
   - utter_inbox
   - utter_dashboard
   - utter_goodbye
   - utter_happy
-  - utter_sad
-  - utter_group-by-item-type
-  - utter_group-by-priority
+  - utter_greet
+  - utter_release
+  - utter_release_num
+  - utter_sonar
+  - utter_jenkins
+  - utter_connectionleak
+  - get_release
 
 templates:
-  utter_greet:
+  utter_hello:
   - text: "Hey! How are you?"
 
   utter_inbox:
   - text: "Your inbox count is 3"
-    buttons:
-    - title: "Group by Item-type"
-      payload: "Group by Item-type"
-    - title: "Group by Priority"
-      payload: "Group by Priority"
 
   utter_dashboard:
   - text: "Loding you dashboard"
@@ -42,12 +57,8 @@ templates:
   utter_happy:
   - text: "Great, carry on!"
 
-  utter_group-by-priority:
-  - text: "There are 2 Hight Priority Items and 4 Medium"
-
-  utter_group-by-item-type:
-  - text: "There are 4 ToDos and 5 defects"
-
-  utter_sad:
-  - text: "Cheer up budy, how may i help you?"
+  utter_greet:
+  - text: "Hello, I am SwiftOps Genie\n how may I assist you today?"
   
+  utter_release:
+  - text: "Enter release and build number"
